--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -12,6 +12,8 @@ on:
 
   # Run tests for any PRs.
   pull_request:
+  schedule:
+    - cron: '0 0 * * *'
 
 env:
   # TODO: Change variable to your image's name.
@@ -59,11 +61,11 @@ jobs:
           key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
 
 
-      - name: load docker image from cache
-        run: |
-          docker load -i ~/.cache/docker/${IMAGE_NAME}.tar
-      - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+#       - name: load docker image from cache
+#         run: |
+#           docker load -i ~/.cache/docker/${IMAGE_NAME}.tar
+#       - name: Build image
+#         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
 
       - name: Save image to cache
