--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -48,12 +48,16 @@ jobs:
         id: docker-cache
         run: |
           echo "::set-output name=dir::$HOME/.cache/docker"
+
+
       - uses: actions/cache@v2
         with:
           path: ${{ steps.docker-cache.outputs.dir }}
           key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
           restore-keys: |
             ${{ runner.os }}-docker-
+
+
       - name: download docker image cache
         uses: actions/cache@v2
         with:
@@ -64,14 +68,18 @@ jobs:
 #       - name: load docker image from cache
 #         run: |
 #           docker load -i ~/.cache/docker/${IMAGE_NAME}.tar
-#       - name: Build image
-#         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
 
-      - name: Save image to cache
-        run: |
-          mkdir -p ~/.cache/docker/
-          docker save -o ~/.cache/docker/${IMAGE_NAME}.tar ${IMAGE_NAME}
+      - name: Build image
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+
+
+#       - name: Save image to cache
+#         run: |
+#           mkdir -p ~/.cache/docker/
+#           docker save -o ~/.cache/docker/${IMAGE_NAME}.tar ${IMAGE_NAME}
+
+
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
