--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -5,13 +5,14 @@ metadata:
   labels:
     run: my-nginx
 spec:
-  ports: # 로드밸런서를 통해 외부로 노출할 포트 지정
-  - port: 8080
+  ports:
+  - port: 80
+    nodePort: 30081
     protocol: TCP
-    targetPort: 8080
+    targetPort: 80
   selector:
     run: my-nginx
-  type: LoadBalancer
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -29,7 +30,9 @@ spec:
     spec:
       containers:
       - name: my-nginx
-        image: flaskapif.azurecr.io/a # 도커 이미지
+        image: ghcr.io/imdb-to-kubernet/image:latest
+        imagePullPolicy: Always
         ports:
-        - containerPort: 8080 # 외부로 노출할 컨테이너 포트
+        - containerPort: 80
+
 
