--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -106,7 +106,7 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: '"apply -f manifest/service.yml --namespace imdb"'
+          args: '"apply -f ./manifest/service.yml --namespace imdb"'
       - name: verify deployment
         uses: steebchen/kubectl@master
         env:
