--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -30,9 +30,7 @@ spec:
     spec:
       containers:
       - name: my-nginx
-        image: ghcr.io/fish895623/imdb-to-kubernet/image:latest
+        image: ghcr.io/fish895623/imdb-to-kubernet/image:irisweb
         imagePullPolicy: Always
         ports:
         - containerPort: 80
-
-
