--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -20,22 +20,22 @@ env:
   IMAGE_NAME: image
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  # test:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Run tests
-        run: |
-          if [ -f docker-compose.test.yml ]; then
-            docker-compose --file docker-compose.test.yml build
-            docker-compose --file docker-compose.test.yml run sut
-          else
-            docker build . --file Dockerfile
-          fi
+  #     - name: Run tests
+  #       run: |
+  #         if [ -f docker-compose.test.yml ]; then
+  #           docker-compose --file docker-compose.test.yml build
+  #           docker-compose --file docker-compose.test.yml run sut
+  #         else
+  #           docker build . --file Dockerfile
+  #         fi
   push:
-    needs: test
+    # needs: test
 
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
@@ -74,10 +74,10 @@ jobs:
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
 
-      - name: Save image to cache
-        run: |
-          mkdir -p ~/.cache/docker/
-          docker save -o ~/.cache/docker/${IMAGE_NAME}.tar ${IMAGE_NAME}
+      # - name: Save image to cache
+      #   run: |
+      #     mkdir -p ~/.cache/docker/
+      #     docker save -o ~/.cache/docker/${IMAGE_NAME}.tar ${IMAGE_NAME}
 
 
       - name: Log into registry
@@ -86,7 +86,7 @@ jobs:
 
       - name: Push image
         run: |
-          IMAGE_ID=${{ github.repository }}/$IMAGE_NAME
+          IMAGE_ID=${{ github.repository }}
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
           # Strip git ref prefix from version
