--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -50,19 +50,19 @@ jobs:
           echo "::set-output name=dir::$HOME/.cache/docker"
 
 
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.docker-cache.outputs.dir }}
-          key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
-          restore-keys: |
-            ${{ runner.os }}-docker-
+      # - uses: actions/cache@v2
+      #   with:
+      #     path: ${{ steps.docker-cache.outputs.dir }}
+      #     key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-docker-
 
 
-      - name: download docker image cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.docker-cache.outputs.dir }}
-          key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
+      # - name: download docker image cache
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ${{ steps.docker-cache.outputs.dir }}
+      #     key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
 
 
 #       - name: load docker image from cache
@@ -101,15 +101,15 @@ jobs:
           docker push $IMAGE_ID:$VERSION
 
 
-      - name: deploy to cluster
-        uses: steebchen/kubectl@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args: '"apply -f ./manifests/service.yml --namespace imdb"'
-      - name: verify deployment
-        uses: steebchen/kubectl@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args: '"rollout restart deployment.apps/my-nginx --namespace imdb"'
+      # - name: deploy to cluster
+      #   uses: steebchen/kubectl@master
+      #   env:
+      #     KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+      #   with:
+      #     args: '"apply -f ./manifests/service.yml --namespace imdb"'
+      # - name: verify deployment
+      #   uses: steebchen/kubectl@master
+      #   env:
+      #     KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+      #   with:
+      #     args: '"rollout restart deployment.apps/my-nginx --namespace imdb"'
