--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -34,3 +34,17 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 80
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: my-nginx-hpa
+  namespace: default
+spec:
+  maxReplicas: 20
+  minReplicas: 2
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: my-nginx
+  targetCPUUtilizationPercentage: 50
