--- a/.github/workflows/buildDeploy.yml
+++ b/.github/workflows/buildDeploy.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: user/app:latest
+          tags: fish895623/imdb-to-kubernet:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
