--- a/.github/workflows/buildDeploy.yml
+++ b/.github/workflows/buildDeploy.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: [ fish895623/imdb-to-kubernet:latest, fish895623/imdb-to-kubernet:develop ]
+          tags: fish895623/imdb-to-kubernet:latest,fish895623/imdb-to-kubernet:${{ github.run_number }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
