--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -1,25 +1,25 @@
 name: Docker
 
 on:
-  push:
-    # Publish `master` as Docker `latest` image.
-    branches:
-      - irisweb
-
+#   push:
+#     # Publish `master` as Docker `latest` image.
+#     branches:
+#       - irisweb
     # Publish `v1.2.3` tags as releases.
-    tags:
-      - v*
+    create:
+      tags:
+        - v*
 
-  # Run tests for any PRs.
-  pull_request:
-#   schedule:
-#     - cron: '0 0 * * *'
+#   # Run tests for any PRs.
+#   pull_request:
+# #   schedule:
+# #     - cron: '0 0 * * *'
 
-env:
-  # TODO: Change variable to your image's name.
-  IMAGE_NAME: image
+# env:
+#   # TODO: Change variable to your image's name.
+#   IMAGE_NAME: image
 
-jobs:
+# jobs:
   # test:
   #   runs-on: ubuntu-latest
 
@@ -34,20 +34,20 @@ jobs:
   #         else
   #           docker build . --file Dockerfile
   #         fi
-  push:
-    # needs: test
+#   push:
+#     # needs: test
 
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+#     runs-on: ubuntu-latest
+#     if: github.event_name == 'push'
 
-    steps:
-      - uses: actions/checkout@v2
+#     steps:
+#       - uses: actions/checkout@v2
       
 
-      - name: setup custom env
-        id: docker-cache
-        run: |
-          echo "::set-output name=dir::$HOME/.cache/docker"
+#       - name: setup custom env
+#         id: docker-cache
+#         run: |
+#           echo "::set-output name=dir::$HOME/.cache/docker"
 
 
       # - uses: actions/cache@v2
@@ -70,8 +70,8 @@ jobs:
 #           docker load -i ~/.cache/docker/${IMAGE_NAME}.tar
 
 
-      - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+#       - name: Build image
+#         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
 
       # - name: Save image to cache
@@ -80,25 +80,25 @@ jobs:
       #     docker save -o ~/.cache/docker/${IMAGE_NAME}.tar ${IMAGE_NAME}
 
 
-      - name: Log into registry
-        run: echo "${{ secrets.DOCKER_HUB }}" | docker login -u ${{ github.actor }} --password-stdin
+#       - name: Log into registry
+#         run: echo "${{ secrets.DOCKER_HUB }}" | docker login -u ${{ github.actor }} --password-stdin
 
 
-      - name: Push image
-        run: |
-          IMAGE_ID=${{ github.repository }}
-          # Change all uppercase to lowercase
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+#       - name: Push image
+#         run: |
+#           IMAGE_ID=${{ github.repository }}
+#           # Change all uppercase to lowercase
+#           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+#           # Strip git ref prefix from version
+#           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+#           # Strip "v" prefix from tag name
+#           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+#           # Use Docker `latest` tag convention
+#           [ "$VERSION" == "master" ] && VERSION=latest
+#           echo IMAGE_ID=$IMAGE_ID
+#           echo VERSION=$VERSION
+#           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+#           docker push $IMAGE_ID:$VERSION
 
 
       # - name: deploy to cluster
