--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: my-nginx
-        image: fish895623/imdb-to-kubernet:irisweb
+        image: fish895623/imdb-to-kubernet:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
