--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -33,20 +33,20 @@ jobs:
           else
             docker build . --file Dockerfile
           fi
-  push:
+  # push:
     # needs: test
-
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
-
-    steps:
-      - uses: actions/checkout@v2
-
-
-      - name: setup custom env
-        id: docker-cache
-        run: |
-          echo "::set-output name=dir::$HOME/.cache/docker"
+# 
+    # runs-on: ubuntu-latest
+    # if: github.event_name == 'push'
+# 
+    # steps:
+      # - uses: actions/checkout@v2
+# 
+# 
+      # - name: setup custom env
+        # id: docker-cache
+        # run: |
+          # echo "::set-output name=dir::$HOME/.cache/docker"
 
 
       # - uses: actions/cache@v2
@@ -69,8 +69,8 @@ jobs:
 #           docker load -i ~/.cache/docker/${IMAGE_NAME}.tar
 
 
-      - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+      # - name: Build image
+        # run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
 
       # - name: Save image to cache
@@ -79,25 +79,25 @@ jobs:
       #     docker save -o ~/.cache/docker/${IMAGE_NAME}.tar ${IMAGE_NAME}
 
 
-      - name: Log into registry
-        run: echo "${{ secrets.DOCKER_HUB }}" | docker login -u ${{ github.actor }} --password-stdin
+      # - name: Log into registry
+      #   run: echo "${{ secrets.DOCKER_HUB }}" | docker login -u ${{ github.actor }} --password-stdin
 
 
-      - name: Push image
-        run: |
-          IMAGE_ID=${{ github.repository }}
-          # Change all uppercase to lowercase
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+      # - name: Push image
+      #   run: |
+      #     IMAGE_ID=${{ github.repository }}
+      #     # Change all uppercase to lowercase
+      #     IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+      #     # Strip git ref prefix from version
+      #     VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+      #     # Strip "v" prefix from tag name
+      #     [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+      #     # Use Docker `latest` tag convention
+      #     [ "$VERSION" == "master" ] && VERSION=latest
+      #     echo IMAGE_ID=$IMAGE_ID
+      #     echo VERSION=$VERSION
+      #     docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+      #     docker push $IMAGE_ID:$VERSION
 
 
       # - name: deploy to cluster
