--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         if [ -f docker-compose.test.yml ]; then
           docker-compose --file docker-compose.test.yml build
+          docker-compose --file docker-compose.test.yml run sut
         else
           docker build . --file Dockerfile
         fi
