--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -1,9 +1,11 @@
 name: Docker
 
 on:
-  push:
+  pull_request:
     branches: 
-    - "*"
+      - 'feature/**'
+      - 'develop'
+      - 'master'
   create:
     tags:
       - v*
