--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -33,82 +33,51 @@ jobs:
           else
             docker build . --file Dockerfile
           fi
-  # push:
-    # needs: test
-#
-    # runs-on: ubuntu-latest
-    # if: github.event_name == 'push'
-#
-    # steps:
-      # - uses: actions/checkout@v2
-#
-#
-      # - name: setup custom env
-        # id: docker-cache
-        # run: |
-          # echo "::set-output name=dir::$HOME/.cache/docker"
+  push:
+    needs: test
 
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
 
-      # - uses: actions/cache@v2
-      #   with:
-      #     path: ${{ steps.docker-cache.outputs.dir }}
-      #     key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-docker-
+    steps:
+      - uses: actions/checkout@v2
 
+      - name: Log into registry
+        run: echo "${{ secrets.DOCKER_HUB }}" | docker login -u ${{ github.actor }} --password-stdin
 
-      # - name: download docker image cache
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: ${{ steps.docker-cache.outputs.dir }}
-      #     key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
+      - name: Set Image tass
+        run: |
+          ${{ GITHUB_RUN_NUMBER }}
 
+      - name: Build & Push image
+        run: docker-compose build && docker-compose push
 
-#       - name: load docker image from cache
+      - name: deploy to cluster
+        uses: steebchen/kubectl@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+        with:
+          args: '"apply -f ./manifests/service.yml --namespace transformer"'
+
+      - name: verify deployment
+        uses: steebchen/kubectl@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+        with:
+          args: '"rollout restart deployment.apps/my-nginx --namespace transformer"'
+
+#       - name: Push image
 #         run: |
-#           docker load -i ~/.cache/docker/${IMAGE_NAME}.tar
-
-
-      # - name: Build image
-        # run: docker build . --file Dockerfile --tag $IMAGE_NAME
-
-
-      # - name: Save image to cache
-      #   run: |
-      #     mkdir -p ~/.cache/docker/
-      #     docker save -o ~/.cache/docker/${IMAGE_NAME}.tar ${IMAGE_NAME}
-
-
-      # - name: Log into registry
-      #   run: echo "${{ secrets.DOCKER_HUB }}" | docker login -u ${{ github.actor }} --password-stdin
-
-
-      # - name: Push image
-      #   run: |
-      #     IMAGE_ID=${{ github.repository }}
-      #     # Change all uppercase to lowercase
-      #     IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-      #     # Strip git ref prefix from version
-      #     VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-      #     # Strip "v" prefix from tag name
-      #     [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-      #     # Use Docker `latest` tag convention
-      #     [ "$VERSION" == "master" ] && VERSION=latest
-      #     echo IMAGE_ID=$IMAGE_ID
-      #     echo VERSION=$VERSION
-      #     docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-      #     docker push $IMAGE_ID:$VERSION
-
-
-      # - name: deploy to cluster
-      #   uses: steebchen/kubectl@master
-      #   env:
-      #     KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
-      #   with:
-      #     args: '"apply -f ./manifests/service.yml --namespace imdb"'
-      # - name: verify deployment
-      #   uses: steebchen/kubectl@master
-      #   env:
-      #     KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
-      #   with:
-      #     args: '"rollout restart deployment.apps/my-nginx --namespace imdb"'
+#           IMAGE_ID=${{ github.repository }}
+#           # Change all uppercase to lowercase
+#           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+#           # Strip git ref prefix from version
+#           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+#           # Strip "v" prefix from tag name
+#           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+#           # Use Docker `latest` tag convention
+#           [ "$VERSION" == "master" ] && VERSION=latest
+#           echo IMAGE_ID=$IMAGE_ID
+#           echo VERSION=$VERSION
+#           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+#           docker push $IMAGE_ID:$VERSION
