--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,18 @@
-version: '3.9'
+version: "3.9"
 
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    image: fish895623/imdb-to-kubernet
+  build_version_latest:
+    extends: app
     image: fish895623/imdb-to-kubernet:latest
+  build_version_tag:
+    extends: app
+    image: fish895623/imdb-to-kubernet:${TAG}
+  build_version_ref:
+    extends: app
+    image: fish895623/imdb-to-kubernet:${REF}
+
