Feature/kubernetes services (#3)
* Cleaning Dockerfile

## hadolint later

* Fix port and limit memories

* set limit, requests of deployment

* autobuild using docker-compose

* test building

* disable jobs.push

* a

* build ci/cd

* tag with SHA

* Deploy

* disable deploytoAksCluster

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
-version: '3.9'
+version: "3.9"
 
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    image: fish895623/testapp:latest
-    ports:
-      - 8080:8080
+    image: fish895623/imdb-to-kubernet
+  build_version_latest:
+    extends: app
+    image: fish895623/imdb-to-kubernet:latest
+  build_version_tag:
+    extends: app
+    image: fish895623/imdb-to-kubernet:${TAG}
