Change RUN count to SHA

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Build & Push image
         run: |
-          export TAG=$GITHUB_RUN_NUMBER
+          export TAG=$GITHUB_SHA
           docker-compose build && docker-compose push
 
   deploy:
