--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -56,10 +56,10 @@ jobs:
         run: echo ${{ env.namespace }}
       - name: create namespace
         run: |
-          if kubectl get namespaces | awk '!/^(NAME)/{ print $1 }' | grep '^transformer$'; then
+          if kubectl get namespaces | awk '!/^(NAME)/{ print $1 }' | grep '^${{ env.namespace }}$'; then
             echo -n "namespace exists"
           else
-            kubectl create namespace transformer
+            kubectl create namespace ${{ env.namespace }}
           fi
 
       - name: deploy to cluster
@@ -67,11 +67,11 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: '"apply -f ./manifests/service.yml --namespace transformer"'
+          args: '"apply -f ./manifests/service.yml --namespace ${{ env.namespace }}"'
 
       - name: verify deployment
         uses: steebchen/kubectl@master
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: '"rollout restart deployment.apps/my-nginx --namespace transformer"'
+          args: '"rollout restart deployment.apps/my-nginx --namespace ${{ env.namespace }}"'
